# storyfairy

./: .gitignore  LICENSE  README.md
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/App/App/Assets.xcassets/Splash.imageset/: Contents.json
ios/storyfairy/: Info.plist
ios/storyfairy.xcodeproj/: project.pbxproj
ios/storyfairy.xcodeproj/xcshareddata/xcschemes/: storyfairy.xcscheme
ios/storyfairy/Endpoint/: ServerEndpoint.swift
ios/storyfairy/Models/: API.swift  DataFetchable.swift  Story.swift  TagSelectionChoice.swift
ios/storyfairy/Other/: storyfairyApp.swift
ios/storyfairy/Other/Assets.xcassets/UCLAPrimaryColor.colorset/: Contents.json
ios/storyfairy/Utils/: CustomFont.swift  FlowLayout.swift  Placeholder.swift
ios/storyfairy/ViewModels/: EndViewModel.swift  InitViewModel.swift  MainViewModel.swift  StoryViewModel.swift  TagSelectionViewModel.swift
ios/storyfairy/Views/Components/: ButtonView.swift  HeaderView.swift  SlideView.swift  TagSelectionView.swift
ios/storyfairy/Views/Pages/: EndView.swift  InitView.swift  MainView.swift  StoryView.swift
proxy/: .gitignore  Dockerfile  main.py  pyproject.toml  test_main.http
proxy/config/: __init__.py  database.py
proxy/models/: character.py  log.py  scene.py  story.py
proxy/services/: db_service.py  image_service.py  imgbb_service.py  openai_service.py  prompt.py  text_service.py
proxy/static/: styles.css
proxy/templates/: chart.html
(+1 files in other folders)
