[tool.poetry]
name = "proxy"
version = "0.1.0"
description = ""
authors = ["Chunxu Yang <chunxuyang@ucla.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.0"
uvicorn = "^0.23.2"
openai = "^0.27.8"
jinja2 = "^3.1.2"
pymongo = {extras = ["srv"], version = "^4.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

